--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="background-glow"></div>
   <div class="header">
     <div class="marquee"></div>
-    <h1>Purdue Gold Rush Slots</h1>
+    <h1>Purdue Slots</h1>
     <div class="marquee"></div>
   </div>
 
