Add dual-screen control and display views

--- a/index.html
+++ b/index.html
@@ -2,71 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="refresh" content="0;url=control.html">
   <title>Purdue Slots</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@500;700&family=Montserrat:wght@600&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!--
-    How to run:
-    1. Serve this folder with any static server (e.g., `npx serve .`, `python -m http.server 8000`).
-    2. Open http://localhost:8000 in a modern browser.
-    3. Replace placeholder images inside main.js or assets/ with real Purdue imagery when ready.
-  -->
-  <div class="background-glow"></div>
-  <div class="header">
-    <div class="marquee"></div>
-    <h1>Purdue Slots</h1>
-    <div class="marquee"></div>
-  </div>
-
-  <main class="machine-shell">
-    <div class="top-panel">
-      <div class="credit-box">
-        <span class="label">Balance</span>
-        <span id="balance" class="value">$0</span>
-      </div>
-      <div class="credit-box">
-        <span class="label">Last Result</span>
-        <span id="result" class="value">Insert credits to play</span>
-      </div>
-      <div class="credit-box">
-        <span class="label">Cost / Spin</span>
-        <span id="cost" class="value">$1</span>
-      </div>
-    </div>
-
-    <div class="bet-panel">
-      <div>
-        <div class="label">Choose Your Bet</div>
-        <div id="bet-options" class="bet-options" role="radiogroup" aria-label="Bet amount"></div>
-      </div>
-      <div class="bet-note">Bigger bets power up Boilermaker multipliers.</div>
-    </div>
-
-    <div class="slot-window">
-      <div class="reel" id="reel-0"><div class="reel-track"></div></div>
-      <div class="reel" id="reel-1"><div class="reel-track"></div></div>
-      <div class="reel" id="reel-2"><div class="reel-track"></div></div>
-      <div id="multiplier-badge" class="multiplier-badge hidden">x2 Multiplier!</div>
-    </div>
-
-    <div class="control-panel">
-      <button id="insert" class="btn secondary">Insert $1</button>
-      <button id="spin" class="btn primary">Spin</button>
-      <button id="auto-spin" class="btn primary ghost">Auto Spin</button>
-      <button id="reset" class="btn danger">Reset</button>
-    </div>
-
-    <div class="footer-text">Purdue pride on every spin. Watch the reels shimmer with Boilermaker gold!</div>
-  </main>
-
-  <div id="celebration-layer" class="celebration-layer" aria-hidden="true"></div>
-  <div id="slogan-banner" class="slogan-banner hidden"></div>
-
-  <script src="main.js"></script>
+  <p>Redirecting to the control screen... If not redirected, <a href="control.html">click here</a>.</p>
 </body>
 </html>
