--- a/display.html
+++ b/display.html
@@ -11,14 +11,14 @@
 </head>
 <body>
   <div class="background-glow"></div>
-  <header class="header">
+  <div class="header">
     <div class="marquee"></div>
     <h1>Purdue Slots - Display Screen</h1>
     <div class="marquee"></div>
-  </header>
+  </div>
 
   <main class="machine-shell display-layout">
-    <section class="top-panel">
+    <div class="top-panel">
       <div class="credit-box">
         <span class="label">Balance</span>
         <span id="balance" class="value">$0</span>
@@ -43,7 +43,7 @@
         <span class="label">Total Winnings</span>
         <span id="total" class="value">$0</span>
       </div>
-    </section>
+    </div>
 
     <div class="slot-window">
       <div class="reel" id="reel-0"><div class="reel-track"></div></div>
